force-app/main/default/objects/Consignment_Request__c/Consignment_Request__c.object-meta.xml
<CustomObject>
    <label>Konsignationsantrag</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Konsignationsanträge</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>