force-app/main/default/objects/Consignment_Request__c/fields/Additional_Cases_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cases_per_Year__c</fullName>
    <label>Additional Cases per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>