force-app/main/default/objects/Consignment_Request__c/fields/Additional_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revenue__c</fullName>
    <label>Additional Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>