force-app/main/default/objects/Consignment_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antragsstellung</fullName>
                <default>true</default>
                <label>Antragsstellung</label>
            </value>
            <value>
                <fullName>Prüfung PM</fullName>
            </value>
            <value>
                <fullName>Genehmigungsprüfung RVL</fullName>
            </value>
            <value>
                <fullName>Genehmigungsprüfung Finanzen</fullName>
            </value>
            <value>
                <fullName>Genehmigt</fullName>
            </value>
            <value>
                <fullName>Abgelehnt oder Storno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>