force-app/main/default/objects/Consignment_Request__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.LastName &amp; &quot;, &quot; &amp; Owner:User.FirstName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>