force-app/main/default/objects/Consignment_Request__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>