force-app/main/default/objects/Consignment_Request__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abklärung Warenbeschaffung</fullName>
                <label>Abklärung Warenbeschaffung (6)</label>
            </value>
            <value>
                <fullName>Aus dem Markt bedienen</fullName>
                <label>Aus dem Markt bedienen (7)</label>
            </value>
            <value>
                <fullName>SAP zur Erfassung</fullName>
                <label>SAP zur Erfassung (8)</label>
            </value>
            <value>
                <fullName>Ware nicht komplett an Lager</fullName>
                <label>Ware nicht komplett an Lager (9)</label>
            </value>
            <value>
                <fullName>Ware an Lager - bitte picken lassen</fullName>
                <label>Ware an Lager - bitte picken lassen (10)</label>
            </value>
            <value>
                <fullName>Sets werden gerade gerichtet</fullName>
                <label>Sets werden gerade gerichtet (11)</label>
            </value>
            <value>
                <fullName>Teillieferung versandbereit</fullName>
                <label>Teillieferung versandbereit (12)</label>
            </value>
            <value>
                <fullName>Teillieferung versendet</fullName>
                <label>Teillieferung versendet (13)</label>
            </value>
            <value>
                <fullName>Ware komplett versandbereit</fullName>
                <label>Ware komplett versandbereit (14)</label>
            </value>
            <value>
                <fullName>Ware komplett versendet</fullName>
                <label>Ware komplett versendet (15)</label>
            </value>
            <value>
                <fullName>Storno</fullName>
                <label>Storno (16)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>