force-app/main/default/objects/Consignment_Request__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consignment_Requests_PM</relationshipName>
    <type>Lookup</type>
</CustomField>