force-app/main/default/objects/Consignment_Request__c/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consignment_Requests_RSM</relationshipName>
    <type>Lookup</type>
</CustomField>