force-app/main/default/objects/Consignment_Request__c/fields/Value_of_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Instruments__c</fullName>
    <label>Value of Instruments</label>
    <summarizedField>Consignment_Request_Product__c.Standard_Cost__c</summarizedField>
    <summaryForeignKey>Consignment_Request_Product__c.Consignment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>