force-app/main/default/objects/Consignment_Request__c/fields/Value_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Request__c</fullName>
    <label>Value of Request</label>
    <summarizedField>Consignment_Request_Product__c.List_Price__c</summarizedField>
    <summaryForeignKey>Consignment_Request_Product__c.Consignment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>