force-app/main/default/objects/Consignment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Owner_Name__c</columns>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>NAME</columns>
    <columns>Request_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Konsignationsanträge</label>
    <language>en_US</language>
</ListView>