force-app/main/default/objects/Consignment_Request__c/listViews/EU_DE_Finance_Consignment_Request.listView-meta.xml
<ListView>
    <fullName>EU_DE_Finance_Consignment_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>EU-DE-Finance</label>
    <queue>EU_DE_Finance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>