force-app/main/default/objects/Consignment_Request__c/listViews/Meine_Konsignationsantraege.listView-meta.xml
<ListView>
    <fullName>Meine_Konsignationsantraege</fullName>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>NAME</columns>
    <columns>Request_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Processing_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Meine Konsignationsanträge</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>DACH</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>